<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registrar"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_registrar" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/menu_editar" />
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_lista" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
